# web_gui

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  conda-requirements.txt  docker-compose.yml  justfile  kubernetes-manifest.yaml  pip-requirements.txt  pyproject.toml  requirements.txt  run.py
k8s/: deploy-redis.yaml  deploy-webapp.yaml  serve-redis.yaml  serve-webapp.yaml
web/: __init__.py  main.py
web/static/css/: index.css  main.css
web/static/js/: create.js  play.js  prism.js  validator.min.js
web/templates/: _favicon.html  index.html  main.html
